--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,10 @@
+.clamps {
+  font-size: clamp(1rem, 10vw, 2rem); 
+  font-style: italic;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-variant: small-caps;
+  opacity: 0.5;
+}
 /* .App {
   text-align: center;
 }
