--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,16 @@ body {
   /* font-variant: small-caps; */
   opacity: 0.95;
 }
+
+.chart {
+  @media screen (max-width: 720px) {
+    position: "relative";
+    height:"100vh"; 
+    width:"100vw";
+    
+  }
+
+}
 /* .App {
   text-align: center;
 }
