--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,7 @@ body {
 }
 
 .chart {
-  @media screen (max-width: 720px) {
+  @media (max-width: 720px) {
     position: "relative";
     height:"100vh"; 
     width:"100vw";
