--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,16 @@ body {
   }
 
 }
+
+.active {
+  color: cyan;
+  border: solid;
+  border-radius: 4em;
+  /* border-width: thick; */
+  border-width: 4px;
+  /* font-weight: bold; */
+  /* text-decoration: underline; */
+}
 /* .App {
   text-align: center;
 }
