--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,6 @@ body {
   font-size: clamp(1rem, 10vw, 2rem); 
   font-style: italic;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  /* font-variant: small-caps; */
   opacity: 0.95;
 }
 
@@ -20,46 +19,14 @@ body {
   color: cyan;
   border: solid;
   border-radius: 4em;
-  /* border-width: thick; */
   border-width: 4px;
-  /* font-weight: bold; */
-  /* text-decoration: underline; */
-}
-/* .App {
-  text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fade { /* source: https://blog.hubspot.com/website/css-fade-in */
+  animation: fadeIn 5s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
